--- a/MoppApp/MoppApp/Containers.storyboard
+++ b/MoppApp/MoppApp/Containers.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="i6Y-8d-5Ix">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="i6Y-8d-5Ix">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -39,7 +39,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mer-2X-pZY" id="m99-5N-URa">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -72,7 +72,7 @@
                                 <rect key="frame" x="0.0" y="56" width="375" height="77"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OKs-lk-JJa" id="H0g-f1-Tia">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digidoc" translatesAutoresizingMaskIntoConstraints="NO" id="Uui-e5-DkA">
@@ -83,33 +83,47 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnu-b7-huo">
-                                            <rect key="frame" x="63" y="18" width="289" height="21"/>
+                                            <rect key="frame" x="63" y="18" width="238" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="detailsLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Isx-e2-EUe">
-                                            <rect key="frame" x="63" y="46" width="289" height="12"/>
+                                            <rect key="frame" x="63" y="46" width="238" height="12"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nkv-qD-1hJ">
+                                            <rect key="frame" x="316" y="7" width="44" height="44"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="AAH-hm-1Ki"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="Hmv-Ib-uen"/>
+                                            </constraints>
+                                            <state key="normal" title="Edit"/>
+                                            <connections>
+                                                <action selector="editTapped:" destination="OKs-lk-JJa" eventType="touchUpInside" id="4Ic-X3-2mf"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottomMargin" secondItem="Isx-e2-EUe" secondAttribute="bottom" constant="10" id="2z5-Pj-d7i"/>
                                         <constraint firstItem="Isx-e2-EUe" firstAttribute="top" secondItem="bnu-b7-huo" secondAttribute="bottom" constant="7" id="7dU-5M-TjH"/>
                                         <constraint firstItem="Uui-e5-DkA" firstAttribute="leading" secondItem="H0g-f1-Tia" secondAttribute="leadingMargin" constant="15" id="CGv-PJ-kT9"/>
                                         <constraint firstItem="Uui-e5-DkA" firstAttribute="top" secondItem="H0g-f1-Tia" secondAttribute="topMargin" constant="5" id="S7C-r9-TJX"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="bnu-b7-huo" secondAttribute="trailing" constant="15" id="jqL-DQ-WAl"/>
+                                        <constraint firstItem="nkv-qD-1hJ" firstAttribute="centerY" secondItem="bnu-b7-huo" secondAttribute="centerY" id="YY9-7D-uw0"/>
                                         <constraint firstItem="bnu-b7-huo" firstAttribute="leading" secondItem="Uui-e5-DkA" secondAttribute="trailing" constant="10" id="lVJ-rH-6Kh"/>
                                         <constraint firstItem="bnu-b7-huo" firstAttribute="centerY" secondItem="Uui-e5-DkA" secondAttribute="centerY" id="pAv-M2-DW1"/>
                                         <constraint firstItem="Isx-e2-EUe" firstAttribute="leading" secondItem="bnu-b7-huo" secondAttribute="leading" id="q7p-pF-ZA8"/>
+                                        <constraint firstAttribute="trailing" secondItem="nkv-qD-1hJ" secondAttribute="trailing" constant="15" id="q8K-ta-gsm"/>
                                         <constraint firstItem="Isx-e2-EUe" firstAttribute="trailing" secondItem="bnu-b7-huo" secondAttribute="trailing" id="s8a-IG-FYt"/>
+                                        <constraint firstItem="nkv-qD-1hJ" firstAttribute="leading" secondItem="bnu-b7-huo" secondAttribute="trailing" constant="15" id="zwK-Hr-1lR"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="containerImageView" destination="Uui-e5-DkA" id="TNo-pQ-q6d"/>
                                     <outlet property="detailsLabel" destination="Isx-e2-EUe" id="eWE-73-rmj"/>
+                                    <outlet property="editButton" destination="nkv-qD-1hJ" id="coR-te-9qz"/>
                                     <outlet property="titleLabel" destination="bnu-b7-huo" id="KT3-n7-eiK"/>
                                 </connections>
                             </tableViewCell>
@@ -117,7 +131,7 @@
                                 <rect key="frame" x="0.0" y="133" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hv2-aC-AVj" id="meR-F9-9hr">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="attachment" translatesAutoresizingMaskIntoConstraints="NO" id="k1i-tf-Axp">
@@ -162,7 +176,7 @@
                                 <rect key="frame" x="0.0" y="208" width="375" height="99"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kJP-XE-8EL" id="8g9-lJ-Vw4">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="98"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="OXB-27-kwG">
@@ -247,7 +261,7 @@
                                 <rect key="frame" x="0.0" y="372" width="375" height="133"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vxl-na-nwh" id="jhi-ZQ-yZp">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="133"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="132"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv1-Iu-PU7">
