Added tab bar icons

--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ylY-Rn-2Bi">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,7 +13,7 @@
         <scene sceneID="peH-oX-y2Q">
             <objects>
                 <viewControllerPlaceholder storyboardName="Containers" id="b4N-MH-WmG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Signed" id="ga6-PB-Ws7"/>
+                    <tabBarItem key="tabBarItem" title="Signed" image="documentsNormal" selectedImage="documentsNormal_2" id="ga6-PB-Ws7"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vae-w1-17S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -23,7 +23,7 @@
         <scene sceneID="soZ-1K-mUT">
             <objects>
                 <viewControllerPlaceholder storyboardName="MyEid" id="FAY-20-bhQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My eID" id="w9D-e6-WVW"/>
+                    <tabBarItem key="tabBarItem" title="My eID" image="eIDNormal_2" selectedImage="eIDNormal" id="w9D-e6-WVW"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vAi-2t-nVj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -37,6 +37,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.027450980619999999" green="0.21176470820000001" blue="0.36078432199999999" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="b4N-MH-WmG" kind="relationship" relationship="viewControllers" id="mgY-BI-w22"/>
@@ -53,7 +54,7 @@
         <scene sceneID="3FP-ZZ-bzB">
             <objects>
                 <viewControllerPlaceholder storyboardName="Settings" id="pmt-cj-EVx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" id="fFi-cr-Xcb" userLabel="Settings"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settingsNormal" selectedImage="settingsNormal_2" id="fFi-cr-Xcb" userLabel="Settings"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cRJ-23-xvF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -104,11 +105,20 @@
         <scene sceneID="clI-CO-oDs">
             <objects>
                 <viewControllerPlaceholder storyboardName="PinOperations" id="POD-22-eUM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Pin Operations" id="gQP-GK-7dS"/>
+                    <tabBarItem key="tabBarItem" title="Pin Operations" selectedImage="pinNormal_2" id="gQP-GK-7dS"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fcg-yW-xvi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2019" y="685"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="documentsNormal" width="25" height="25"/>
+        <image name="documentsNormal_2" width="25" height="25"/>
+        <image name="eIDNormal" width="25" height="25"/>
+        <image name="eIDNormal_2" width="25" height="25"/>
+        <image name="pinNormal_2" width="25" height="25"/>
+        <image name="settingsNormal" width="25" height="25"/>
+        <image name="settingsNormal_2" width="25" height="25"/>
+    </resources>
 </document>
