Initial container screen

--- a/MoppApp/MoppApp/Signing.storyboard
+++ b/MoppApp/MoppApp/Signing.storyboard
@@ -41,6 +41,9 @@
                                         <integer key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <segue destination="pZJ-sd-sO3" kind="show" id="ADR-qO-W8b"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose file to sign or validate" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3U-ac-Mrq">
                                 <rect key="frame" x="16" y="301" width="343" height="23.5"/>
@@ -84,6 +87,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rp9-fu-9Aw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1274" y="-26"/>
+        </scene>
+        <!--Container-->
+        <scene sceneID="dLj-d9-YAC">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Container" id="pZJ-sd-sO3" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c4I-W8-hWd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1265" y="241"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YBV-PF-rmm">
